test/typechecker.d/invalid/ass0.surc.bad
n = 5

f(x: Integer): Integer = fndo
	var i <- 5
	if i
		return x
	else
		return n
